data/logs/logs4-25NTZkZw.txt
configlo:25,18:10:16:handle_exception:82:NTZkZw -- Custom Uncaught exception
Traceback (most recent call last):
  File "dsds.py", line 1, in <module>
    from processing.get_files import loadFiles
  File "/home/henry/pydocs/processing/get_files.py", line 20, in <module>
    from processing.gdoc import GDoc
  File "/home/henry/pydocs/processing/gdoc.py", line 72
    text = await response.text()
           ^
SyntaxError: 'await' outside async function
configlo:25,18:10:16:sendmail:103:NTZkZw -- sending mail
configlo:25,18:10:16:handle_exception:86:NTZkZw -- exiting! from sshook
